--- a/style.css
+++ b/style.css
@@ -25,9 +25,9 @@
 }
 
 .word4 {
-    font-family: 'MapoFlowerIsland', sans-serif;
+    font-family: 'Diphylleia', sans-serif;
     font-weight: 550;
-    font-size: 68px;
+    font-size: 65px;
 }
 
 body {
